--- a/client/package.json
+++ b/client/package.json
@@ -5,13 +5,14 @@
   "dependencies": {
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
+    "core-js": "^3.39.0",
     "cra-template": "1.2.0",
     "install": "^0.13.0",
     "npm": "^11.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.1.0",
-    "react-scripts": "5.0.1"
+    "react-scripts": "^5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -36,5 +37,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/eslint-parser": "^7.25.9",
+    "eslint-webpack-plugin": "^4.2.0"
   }
 }
