--- a/client/package.json
+++ b/client/package.json
@@ -15,8 +15,7 @@
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.0",
     "react-scripts": "^5.0.1",
-    "react-simple-star-rating": "^5.1.7",
-    "react-star-ratings": "^2.3.0"
+    "react-simple-star-rating": "^5.1.7"
   },
   "scripts": {
     "start": "react-scripts start",
