chor: updaye aws key

--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,3 @@
 JWT_SECRET = "KhulJaSimSim"
-AWS_ACCESS_KEY_ID = AKIA4HWJTXBZ6YHLLPGD
-AWS_SECRET_ACCESS_KEY = 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
+AWS_ACCESS_KEY_ID = AKIA4HWJTXBZTDMBDCEH
+AWS_SECRET_ACCESS_KEY = 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
