--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,3 @@
 JWT_SECRET = "KhulJaSimSim"
+AWS_ACCESS_KEY_ID = AKIA4HWJTXBZTDMBDCEH
+AWS_SECRET_ACCESS_KEY = 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
